Added tracing and metrics
